(2001/07/05 - broeker) Some post-last-minute DOS/DJGPP build fixes.
(2001/07/03 - petrs)   Updated the version strings to 16.0a.
(2001/07/02 - petrs)   Updated the contrib/README to include xcscope.
(2001/07/02 - petrs)   15.3 version name, man page update, README update.
                       Make dist includes webcscope directory.
(2001/06/29 - ragho)   webcscope added to contrib 
(2001/06/29 - broeker) Re-formatted README, and added a tip working around 
	               buggy libcurses on HP-UX 10.
(2001/06/29 - broeker) Oversight in packages/MSDOS/djmake.bat fixed.	
(2001/06/28 - darrylo) Updated xcscope.el to include GNU Emacs fixes and
		       fuzzy pattern matching.  Updated docs in xcscope.el.
(2001/06/28 - broeker) Added files in packages/MSDOS that help compiling
		       cscope on MSDOS using the DJGPP compiler.
(2001/06/28 - broeker) Add test for existence of <sys/termios.h> header,
		       to protect platforms that don't have it.
(2001/06/27 - broeker) Yet another set of automake/autoconf changes. 
                       Regenerated auto* files checked in, too. We are
		       'make distcheck' ready, now. Added 'ylwrap' to
		       CVS.
(2001/06/26 - broeker) Changed lex/flex handling in automake/autoconf setup
	               to make 'make distcheck' work cleanly: added new
		       files scanner.h and lookup.h to list of sources. 
		       Made sure both scanner.l and fscanner.l end up in the
		       distribution tarball, as they should.  Removed some
		       quotes from definition of ACNU_DECL_YYTEXT in 
		       configure.in which confused autoheader.
(2001/06/25 - broeker) Change handling of tag-less enums to same method as
	               used in fscanner.l since 2001/06/19.
(2001/06/25 - broeker) Fix SF bug #435535: two uses of yytext[] had been left 
	               over in fscanner.l, causing incorrect compression of
		       keywords #define and #include.
(2001/06/19 - broeker) More bugfixes and changes to flex scanner. Handling