@@ -476,6 +476,7 @@ dnl AC_CHECK_LIB(curses, main)
 dnl Checks for header files.
 AC_HEADER_DIRENT
 AC_HEADER_STDC
+AC_CHECK_FUNCS(strchr memcpy memset)
 AC_CHECK_HEADERS(fcntl.h sys/window.h sys/termios.h unistd.h)
 
 dnl Checks for typedefs, structures, and compiler characteristics.
@@ -487,6 +488,7 @@ AC_TYPE_SIZE_T
 dnl Checks for library functions.
 AC_TYPE_SIGNAL
 AC_CHECK_FUNCS(getcwd regcmp regcomp strerror vsnprintf snprintf)
+AC_CHECK_FUNCS(fixkeypad)
 
 case "$host_os" in
 	linux*)
