@@ -31,7 +31,7 @@
  DAMAGE. 
  =========================================================================*/
 
-/* $Id: egrep.y,v 1.4 2000/05/18 15:11:09 broeker Exp $ */
+/* $Id: egrep.y,v 1.5 2001/03/27 15:14:02 broeker Exp $ */
 
 /*
  * egrep -- fine lines containing a regular expression
@@ -45,26 +45,11 @@
 %left STAR PLUS QUEST
 
 %{
-  /*#include "global.h"*/
+#include "global.h"
 #include <ctype.h>
 #include <stdio.h>
-#ifdef BSD	/* build command requires #ifdef instead of #if */
-#undef	tolower		/* BSD tolower doesn't test the character */
-#define	tolower(c)	(islower(c) ? (c) : (c) - 'A' + 'a')	
-char	*memset();
-#else
-#ifdef V9
-char	*memset();
-#else /*V9*/
-#include <memory.h>	/* memset */
-#endif /*V9*/
-#endif
-#include <setjmp.h>	/* jmp_buf */
 
-/* HBB 20000509: only this line from 'global.h' is really
- * needed. #include'ing all of it would pull in the unwanted
- * non-static prototype for 'yylex()'.  */
-FILE	*myfopen(char *path, char *mode);
+#include <setjmp.h>	/* jmp_buf */
 
 #define nextch()	(*input++)
 
@@ -109,6 +94,7 @@ static	int cclenter(int x);
 static	int enter(int x);
 
 static int yylex(void);
+static int yyerror(char *);
 %}
 
 %%
@@ -156,7 +142,7 @@ r:	r OR r
 	;
 
 %%
-int
+static int
 yyerror(char *s)
 {
 	message = s;
@@ -166,9 +152,6 @@ yyerror(char *s)
 static int
 yylex(void)
 {
-	/* HBB 20010327: shouldn't be needed: we're inside the Yacc
-	 * source itself */
-	/* extern int yylval; */ 
 	int cclcnt, x;
 	char c, d;
 	switch(c = nextch()) {
@@ -615,6 +598,9 @@ egrep(char *file, FILE *output, char *format)
 done:	(void) fclose(fptr);
 	return(0);
 }
+
+/* FIXME HBB: should export this to a separate file and use
+ * AC_REPLACE_FUNCS() */
 #if BSD
 /*LINTLIBRARY*/
 /*
