@@ -30,22 +30,29 @@
  DAMAGE. 
  =========================================================================*/
 
-/* $Id: invlib.h,v 1.2 2000/05/09 13:34:35 broeker Exp $ */
+/* $Id: invlib.h,v 1.3 2001/06/01 12:43:24 broeker Exp $ */
 
 
 #ifndef CSCOPE_INVLIB_H
 #define CSCOPE_INVLIB_H
 
+#include <stdio.h>		/* need definition of FILE* */
+#include <limits.h>
+
 /* inverted index definitions */
 
 /* postings temporary file long number coding into characters */
 /* FIXME HBB: where would these definitions come from ? */
-#if u3b || u3b2 || u3b5 || u3b15 || uts
+#if CHAR_MAX==255
 # define	BASE		223	/* 255 - ' ' */
 # define	PRECISION	4	/* maximum digits after converting a long */
-#else	/* assume sign-extension of a char when converted to an int */
+#else
+# if CHAR_MAX==127	/* assume sign-extension of a char when converted to an int */
 #  define	BASE		95	/* 127 - ' ' */
 #  define	PRECISION	5	/* maximum digits after converting a long */
+# else
+#  error Need a platform with 8 bits in a char value
+# endif
 #endif
 
 /* inverted index access parameters */
