@@ -45,7 +45,7 @@ BOOL	unixpcmouse = NO;	/* running with a mouse on the Unix PC? */
 static int uw_hs, uw_vs;	/* character height and width */
 #endif
 
-static char const rcsid[] = "$Id: mouse.c,v 1.2 2000/05/03 19:07:09 petr Exp $";
+static char const rcsid[] = "$Id: mouse.c,v 1.3 2000/05/03 22:02:10 petr Exp $";
 
 typedef	struct {			/* menu */
 	char	*text;
@@ -88,7 +88,6 @@ void
 mouseinit(void)
 {
 	char	*term;
-	char	*mygetenv();
 
 	/* see if this is emacsterm or viterm */
 	term = mygetenv("TERM", "");
